--- a/editor.css
+++ b/editor.css
@@ -1,13 +1,9 @@
 /* Simple HTML5 Editor */
 
-	.texteditor {position:relative}
-	*{-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box;}
-	h1{margin:0;}
-	body {background:#414141;font-family:"Arial", "Helvetica", Sans-Serif;color:#2a2a2a}
+.texteditor {position:relative}
 
 	.texteditor .textarea {
-	width:100%;
-	margin-top:15px;
+	margin-top:5px;
 	padding:10px;
 	background:white;
 	border-radius:3px;
@@ -17,67 +13,14 @@
 	.textarea:focus {
 	outline:none}
 	
-	footer{text-align:center;text-shadow:0px 1px 0px rgba(255,255,255,.1);}
-	footer a{color:#181818; text-decoration:none;}
-
 	button {
-	padding:5px 7px 4px 7px;
-	margin-right:8px;
-	border:none;
-	font-size:12px;
-	color:#777777;
-	text-shadow:0px 1px 0px rgba(255,255,255,1);
-	cursor:pointer;	
+	cursor:pointer;
+	padding:5 10px;
+	background:#f0f0f0;
 	border-radius:3px;
-	background:-webkit-gradient(linear, left top, left bottom, from(#ececec), to(#d6d6d6));
-	background:-moz-linear-gradient(top, #ececec, #d6d6d6);
-	-moz-box-shadow:inset 0px 1px 0px rgba(255, 255, 255, 0.5),0px 1px 0px rgba(0, 0, 0, 0.2);
-	-webkit-box-shadow:inset 0px 1px 0px rgba(255, 255, 255, 0.5),0px 1px 0px rgba(0, 0, 0, 0.2);
-	box-shadow:inset 0px 1px 0px rgba(255, 255, 255, 0.5),0px 1px 0px rgba(0, 0, 0, 0.2),0px 0px 2px rgba(0, 0, 0, 0.2);
-	}
+	border:1px solid #ccc;
+	box-shadow:0px 0px 5px #ddd}
 	
 	button:hover {
-	background:-webkit-gradient(linear, left top, left bottom, from(#d6d6d6), to(#ececec));
-	background:-moz-linear-gradient(top, #d6d6d6, #ececec);
-	-moz-box-shadow:inset 0px 1px 0px rgba(255, 255, 255, 0.5),0px 1px 0px rgba(0, 0, 0, 0.2);
-	-webkit-box-shadow:inset 0px 1px 0px rgba(255, 255, 255, 0.5),0px 1px 0px rgba(0, 0, 0, 0.2);
-	box-shadow:inset 0px 1px 0px rgba(255, 255, 255, 0.5),0px 1px 0px rgba(0, 0, 0, 0.2),0px 0px 2px rgba(0, 0, 0, 0.2);}
-
-	.text{
-	padding:15px;
-	width:100%;
-	background:#ececec;
-	-moz-border-radius:0 0 6px 6px;
-	-webkit-border-radius:0 0 6px 6px;
-	-o-border-radius:0 0 6px 6px;
-	border-radius:0 0 6px 6px;}
-
-	.main {
-	width:600px;
-	margin:100px auto;
-	margin-bottom: 15px;
-	-moz-border-radius:6px;
-	-webkit-border-radius:6px;
-	-o-border-radius:6px;
-	border-radius:6px;
-	-moz-box-shadow:0px 1px 3px rgba(0, 0, 0, 0.7);
-	-webkit-box-shadow:0px 1px 3px rgba(0, 0, 0, 0.7);
-	box-shadow:0px 2px 3px rgba(0, 0, 0, 0.7);}
-
-	.main h1{
-	width:100%;
-	height:42px;
-	-moz-border-radius:6px 6px 0 0;
-	-webkit-border-radius:6px 6px 0 0;
-	-o-border-radius:6px 6px 0 0;
-	border-radius:6px 6px 0 0;
-	border-bottom:1px solid #383838;
-	background:-webkit-gradient(linear, left top, left bottom, from(#c1c1c1), to(#a3a3a3));
-	background:-moz-linear-gradient(top, #c1c1c1, #a3a3a3);
-	-moz-box-shadow:inset 0px 1px 0px rgba(255, 255, 255, 0.5);
-	-webkit-box-shadow:inset 0px 1px 0px rgba(255, 255, 255, 0.5);
-	box-shadow:inset 0px 1px 0px rgba(255, 255, 255, 0.5);
-	color:#3f3f3f;
-	text-shadow:0px 1px 0px rgba(255, 255, 255, 0.5);
-	font-size:14px;
-	padding:14px;}
+	background:#e8e8e8;
+	box-shadow:0px 0px 5px #bbb}
